const { DataTypes } = require('sequelize');
const {sequelize} = require('../config/database');

const Team = sequelize.define('Team', {
  id: { type: DataTypes.UUID, defaultValue: DataTypes.UUIDV4, primaryKey: true },

  name: { type: DataTypes.STRING, allowNull: false },
  description: { type: DataTypes.TEXT },
}, {
  tableName: 'teams',
  timestamps: true,
});

module.exports = Team;
